<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_Params" Id="{990d92c4-5837-456c-8e58-b28688411394}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	SS_INITIALIZE: SINT := 0;
	SS_STEP: SINT := 1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>